--- a/docs/content/deployment/clustered-deployment.mdx
+++ b/docs/content/deployment/clustered-deployment.mdx
@@ -1,11 +1,11 @@
 ---
-title: Clustered deployment
+title: Distributing work across a cluster
 description: Configuration for distributing work across a cluster
 ---
 
 import { Link } from "gatsby"
 
-Clustering of Vyne server instances allows for distribution of CPU intensive tasks, especially projections.
+Deploying a cluster of Vyne instances allows for distribution of CPU intensive tasks, especially projections.
 
 This is especially well suited for queries that return large numbers of records, which need to be projected.
 Distributing the work over a cluster provides significant performance improvements, as the work can be parallelized.
@@ -40,36 +40,36 @@ query coordinator.  Once this value is exceeded, the query coordinator node will
 For projection work to be distributed across all vyne nodes in a cluster the following configuration options are provided
 
 
-| Config parameter                | Description                                                                                        | Default setting             |
-|---------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------|
-| `vyne.projection.distributionMode`               | Defines where projection work will be performed.  On the local node or the cluster LOCAL, DISTRIBUTED  | `LOCAL`                  |
-| `vyne.projection.distributionPacketSize` | Defines the number of records in each work packet distributed to other vyne servers.  Applicable to DISTRIBUTED distributionMode only  | 100                     |
-| `vyne.projection.distributionRemoteBias`     |  Defines the number of cluster members before work is preferentially distributed to remote nodes | 10                        |
+| Config parameter                         | Description                                                                                                                           | Default setting |
+|------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------|-----------------|
+| `vyne.projection.distributionMode`       | Defines where projection work will be performed.  On the local node or the cluster LOCAL, DISTRIBUTED                                 | `LOCAL`         |
+| `vyne.projection.distributionPacketSize` | Defines the number of records in each work packet distributed to other vyne servers.  Applicable to DISTRIBUTED distributionMode only | 100             |
+| `vyne.projection.distributionRemoteBias` | Defines the number of cluster members before work is preferentially distributed to remote nodes                                       | 10              |
 
 
 
 ## Cluster Configuration
 
-| Config parameter                | Description                                                                                        | Default setting             |
-|---------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------|
-| `vyne.hazelcast.discovery` | Specifies the discovery mechanism hazelcast will use to find other instances. `multicast`, `aws` or `eureka` | `multicast`                     |
-| `vyne.hazelcast.eurekaUri`     |  URI of the coordinating eureka instance when discovery is set to eureka | `http://127.0.0.1:8761/eureka/`                        |
-| `vyne.hazelcast.memberTag`     | Denotes which member type this is within the hazelcast cluster | `vyne-query-service`                        |
-| `vyne.hazelcast.networkInterface`     |  Should only be specified if the deployment environment requires that hazelcast only bind to a single network interface.  The network interface supplied should be specified in hazelcast networking naming e.g. 10.10.*.*, 172.16.*.* |                        |
-| `vyne.hazelcast.useMetadataForHostAndPort`     |  Specific to eureka hazelcast discovery.  Specifies if metadata should be published to and used for hazelcast node and port discovery  | `true`                        |
-| `vyne.hazelcast.awsPortScanRange`     |  Specific to aws hazelcast discovery.  Specifies the port ranges that will be scanned from running hazelcast on ec2 instances | `true`                        |
-| `vyne.hazelcast.taskPoolSize`     |  Specifies the number of threads dedicated to processing distributed work loads  | 2                        |
-| `vyne.hazelcast.taskQueueSize`     |  Specifies the size of the queue of tasks on each cluster node.  A value of 0 sets an infinite queue size  | 0        |
+| Config parameter                           | Description                                                                                                                                                                                                                           | Default setting                 |
+|--------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------|
+| `vyne.hazelcast.discovery`                 | Specifies the discovery mechanism hazelcast will use to find other instances. `multicast`, `aws` or `eureka`                                                                                                                          | `multicast`                     |
+| `vyne.hazelcast.eurekaUri`                 | URI of the coordinating eureka instance when discovery is set to eureka                                                                                                                                                               | `http://127.0.0.1:8761/eureka/` |
+| `vyne.hazelcast.memberTag`                 | Denotes which member type this is within the hazelcast cluster                                                                                                                                                                        | `vyne-query-service`            |
+| `vyne.hazelcast.networkInterface`          | Should only be specified if the deployment environment requires that hazelcast only bind to a single network interface.  The network interface supplied should be specified in hazelcast networking naming e.g. 10.10.*.*, 172.16.*.* |                                 |
+| `vyne.hazelcast.useMetadataForHostAndPort` | Specific to eureka hazelcast discovery.  Specifies if metadata should be published to and used for hazelcast node and port discovery                                                                                                  | `true`                          |
+| `vyne.hazelcast.awsPortScanRange`          | Specific to aws hazelcast discovery.  Specifies the port ranges that will be scanned from running hazelcast on ec2 instances                                                                                                          | `true`                          |
+| `vyne.hazelcast.taskPoolSize`              | Specifies the number of threads dedicated to processing distributed work loads                                                                                                                                                        | 2                               |
+| `vyne.hazelcast.taskQueueSize`             | Specifies the size of the queue of tasks on each cluster node.  A value of 0 sets an infinite queue size                                                                                                                              | 0                               |
 
 
 ### Cluster formation and discovery
 Vyne services can form a cluster discovering other nodes via one of three discovery mechanisms:
 
-| Mechanism                | Description                                                                                        |
-|---------------------------------|----------------------------------------------------------------------------------------------------|
-| `multicast` | Vyne services attempt to use multicast to discover other cluster nodes   |
-| `aws` | Vyne services attempt use AWS metadata to discover other cluster nodes   |
-| `eureka` | Vyne services use Eureka metadata to discover other cluster nodes |
+| Mechanism   | Description                                                            |
+|-------------|------------------------------------------------------------------------|
+| `multicast` | Vyne services attempt to use multicast to discover other cluster nodes |
+| `aws`       | Vyne services attempt use AWS metadata to discover other cluster nodes |
+| `eureka`    | Vyne services use Eureka metadata to discover other cluster nodes      |
 
 
 ## Example configurations
