chore(docs/tutorial): added video

--- a/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
+++ b/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
@@ -10,6 +10,9 @@ import { Link } from "gatsby"
 In this tutorial, we'll set up a local instance of Vyne, and then see how to use Vyne
 to link data from a REST API, a database, and a Kafka topic.
 
+<div style="position: relative; padding-bottom: 48.28125%; height: 0;"><iframe src="https://www.loom.com/embed/5837732161c742e9a341b9bb596bae11" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+
+
 Our use-case is to find a list of films, along with which online streaming service has the
 films available to watch.
 
@@ -292,7 +295,7 @@ There's some different options to show the result of Vyne queries. These are dis
 
  * Table - Nice for tabular, two dimensional data
  * Tree - Nice for nested data
- * Profile - What work did Vyne to produce the result. Contains information about the systems called by Vyne, performance stats and lineage information. 
+ * Profile - What work did Vyne to produce the result. Contains information about the systems called by Vyne, performance stats and lineage information.
 
 Once the query is completed, you should see a list of records displayed in the grid.
 
