--- a/docs/content/release-notes/0.20.1.mdx
+++ b/docs/content/release-notes/0.20.1.mdx
@@ -2,7 +2,7 @@
 title: 0.20.1
 ---
 
-0.20.1 is minor patch release, which addresses issues found running Vyne through Docker on M1 Max Macbook Pros
+0.20.1 is a patch release, which addresses issues found running Vyne through Docker on M1 Max Macbook Pros.
 
 ## Fixes
 
