--- a/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
+++ b/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
@@ -49,7 +49,7 @@ The following configuration parameters are available:
 |`bucket`|The bucket name|true||
 |`objectKey`|The name of the object in the S3 bucket - generally a file name|true||
 |`targetTypeName`|The name of the type that content from the S3 bucket should be consumed as|true||
-         
+
 
 #### Example
 
@@ -85,7 +85,7 @@ The following configuration parameters are available:
 |`targetTypeName`|The name of the type that content from the S3 bucket should be consumed as|true||
 |`queueName`|The name of the SQS queue|true||
 |`pollSchedule`|A cron expression that defines how frequently to check for new messages.  Defaults to every second|false||
-         
+
 
 #### Example
 
@@ -124,7 +124,7 @@ The following configuration parameters are available:
 |`operationName`|The name of the operation, as defined in the schema.  Should be in the format of a fully qualified operation name.  See the sample for an example|true||
 |`pollSchedule`|A [cron expression](https://www.baeldung.com/cron-expressions#cron-expression), defining the frequency this operation should be invoked.|true||
 |`parameterMap`|An optional map of parameters to pass to the operation|false||
-         
+
 
 #### Example
 
@@ -138,6 +138,39 @@ The following configuration parameters are available:
     "parameterMap" : {
       "customerStatus" : "ACTIVE"
     }
+  }
+}
+```
+
+### Polling query input
+| Pipeline Type Key | Direction | Maturity |
+|-------------------|-----------|----------|
+| `query`    | `INPUT` | Beta |
+
+Invokes a TaxiQL query on Vyne, on a periodic basis.
+
+The result of this query is published downstream on the pipeline to be transformed to
+another type, and published to an output.
+
+#### Parameters
+
+The following configuration parameters are available:
+
+|Parameter|Description|Required|Default Value|
+|---------|-----------|--------|-------------|
+|`query`|The query to be executed. See the sample for an example. |true||
+|`pollSchedule`|A [cron expression](https://www.baeldung.com/cron-expressions#cron-expression), defining the frequency this query should be invoked.|true||
+
+
+#### Example
+
+```json
+{
+  "input" : {
+    "type" : "query",
+    "direction" : "INPUT",
+    "query" : "find { Person( FirstName == 'Jim' ) }",
+    "pollSchedule" : "* * * * * *"
   }
 }
 ```
@@ -166,7 +199,7 @@ The following configuration parameters are available:
 |`connectionName`|The name of the connection, as registered in Vyne's connection manager|true||
 |`topic`|The name of the topic to consume from|true||
 |`targetTypeName`|The fully qualified name of the type that content should be read as.|true||
-         
+
 
 #### Example
 
@@ -204,7 +237,7 @@ The following configuration parameters are available:
 |Parameter|Description|Required|Default Value|
 |---------|-----------|--------|-------------|
 |`targetType`|The type that defines the cask containing this data|true||
-         
+
 
 #### Example
 
@@ -237,7 +270,7 @@ The following configuration parameters are available:
 |Parameter|Description|Required|Default Value|
 |---------|-----------|--------|-------------|
 |`operationName`|The name of the operation, as defined in the schema.  Should be in the format of a fully qualified operation name.  See the sample for an example|true||
-         
+
 
 #### Example
 
@@ -275,7 +308,7 @@ The following configuration parameters are available:
 |`connectionName`|The name of the connection, as registered in Vyne's connection manager|true||
 |`topic`|The name of the topic to write to|true||
 |`targetTypeName`|The fully qualified name of the type that content should be written as.|true||
-         
+
 
 #### Example
 
@@ -327,7 +360,7 @@ The following configuration parameters are available:
 |---------|-----------|--------|-------------|
 |`connection`|The name of a connection, configured in Vyne's connection manager|true||
 |`targetTypeName`|The fully qualified name of the type which content being pushed to the database should be read as|true||
-         
+
 
 #### Example
 
@@ -340,6 +373,41 @@ The following configuration parameters are available:
     "targetTypeName" : "com.demo.Customer",
     "targetType" : "com.demo.Customer",
     "windowDurationMs" : 500
+  }
+}
+```
+
+### AWS S3
+| Pipeline Type Key | Direction | Maturity |
+|-------------------|-----------|----------|
+| `awsS3`    | `OUTPUT` | Beta |
+
+An output that produces a single file to an S3 bucket.
+
+#### Parameters
+
+The following configuration parameters are available:
+
+|Parameter|Description|Required|Default Value|
+|---------|-----------|--------|-------------|
+|`connectionName`|The name of the connection, as registered in Vyne's connection manager|true||
+|`bucket`|The bucket name|true||
+|`objectKey`|The name of the object in the S3 bucket - generally a file name|true||
+|`targetTypeName`|The name of the type based on which to produce the file|true||
+
+
+#### Example
+
+```json
+{
+  "output" : {
+    "type" : "awsS3",
+    "direction" : "OUTPUT",
+    "connectionName" : "my-aws-connection",
+    "bucket" : "my-bucket",
+    "objectKey" : "customers.csv",
+    "targetTypeName" : "com.demo.customers.Customer",
+    "targetType" : "com.demo.customers.Customer"
   }
 }
 ```
