--- a/docs/content/deployment/deploying-vyne.mdx
+++ b/docs/content/deployment/deploying-vyne.mdx
@@ -38,11 +38,22 @@ An example of the config file is shown below:
 
 ```hocon
 services {
-    analytics-server="http://vyne-analytics-server"
-    cask-server="http://cask"
-    pipeline-runner="http://vyne-pipeline-runner"
-    query-server="http://vyne"
-    schema-server="http://vyne-schema-server"
+    analytics-server {
+        url="http://vyne-analytics-server"
+    }
+    cask-server {
+        url="http://cask"
+    }
+    pipeline-runner {
+        url="http://vyne-pipeline-runner"
+    }
+    query-server {
+        url="http://vyne"
+    }
+    schema-server {
+      url="http://vyne-schema-server"
+      rsocket-port=7655
+    }
 }
 ```
 
