--- a/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
+++ b/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
@@ -68,12 +68,12 @@ The following configuration parameters are available:
 }
 ```
 
-### AWS S3 via Sqs
+### AWS S3 via SQS
 | Pipeline Type Key | Direction | Maturity |
 |-------------------|-----------|----------|
 | `awsS3`    | `INPUT` | Beta |
 
-A source that consumes a stream of S3 events via a preconfigured Sqs queue
+A source that consumes a stream of S3 events via a preconfigured SQS queue
 
 #### Parameters
 
