chore(pipelines): remove mentions of SNS as we only support SQS

--- a/docs/content/reference/connections/connections-config.mdx
+++ b/docs/content/reference/connections/connections-config.mdx
@@ -224,7 +224,7 @@ The following configuration options are supported under the `connectionParameter
 ## AWS connections
 AWS connections are stored under the `aws` element.
 
-Vyne uses AWS connections to connect to SNS, SQS for data pipelines and other services as part of query execution.
+Vyne uses AWS connections to connect to SQS for data pipelines and other services as part of query execution.
 
 You can configure an AWS connection as follows.  As with all other config file value, you can either set
 the value explicitly, or read from an environment variable (as shown).
