--- a/docs/content/release-notes/0.20.0.mdx
+++ b/docs/content/release-notes/0.20.0.mdx
@@ -3,6 +3,7 @@ title: 0.20.0
 ---
 
 
+
 import { Link } from 'gatsby';
 
 0.20 is a major feature release, containing multiple new features, including breaking changes.
@@ -207,7 +208,7 @@ You should've been provided a license key already.  If not, please get in touch 
 
 We're excited with our first pass of support for AWS services:
 
- * Pipeline sink and source from SQS, and SNS
+ * Pipeline sink and source from SQS (allows connecting with S3)
  * Querying from RDF data sources
 
 This is an area we're working on, so expect to see more support very shortly
